--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>8.0.21</version>
 	</dependency>
+	<dependency>
+   		<groupId>org.mybatis</groupId>
+   		<artifactId>mybatis</artifactId>
+   		<version>3.4.5</version>
+	</dependency>
   </dependencies>
 
   <build>
@@ -57,6 +62,13 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+          	<archive>
+            	<manifest>
+                	<mainClass>com.cognixia.jumplus.dollarsbank.App</mainClass>
+                </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
@@ -75,6 +87,11 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
+		<plugin>
+    	  <artifactId>maven-dependency-plugin</artifactId>
+    	  <version>3.1.2</version>
+		</plugin>
       </plugins>
     </pluginManagement>
   </build>
